force-app/main/default/objects/EmailMessage/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>facture_devis__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>