force-app/main/default/objects/EmailMessage/fields/Sous_types_d_emails__c.field-meta.xml
<CustomField>
    <fullName>Sous_types_d_emails__c</fullName>
    <label>Sous-types d&apos;emails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prestataire de sante</fullName>
                <label>Prestataire de santé</label>
            </value>
            <value>
                <fullName>Correspondant</fullName>
            </value>
            <value>
                <fullName>Prestataire logistique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>