force-app/main/default/objects/EmailMessage/fields/Type_de_finance__c.field-meta.xml
<CustomField>
    <fullName>Type_de_finance__c</fullName>
    <label>Type de finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devis</fullName>
            </value>
            <value>
                <fullName>Facture</fullName>
            </value>
            <value>
                <fullName>Remboursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>