force-app/main/default/objects/EmailMessage/fields/Type_de_pieces_jointes__c.field-meta.xml
<CustomField>
    <fullName>Type_de_pieces_jointes__c</fullName>
    <label>Type de pièces-jointes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pieces justificatives d ouverture</fullName>
                <label>Pièces justificatives d&apos;ouverture</label>
            </value>
            <value>
                <fullName>Rapport medical</fullName>
                <label>Rapport médical</label>
            </value>
            <value>
                <fullName>Devis</fullName>
                <isActive>false</isActive>
                <label>Devis</label>
            </value>
            <value>
                <fullName>Facture</fullName>
                <isActive>false</isActive>
                <label>Facture</label>
            </value>
            <value>
                <fullName>Remboursement</fullName>
                <isActive>false</isActive>
                <label>Remboursement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>